fix letter spacing for tablet version (768px)

--- a/src/css/our-yachts.css
+++ b/src/css/our-yachts.css
@@ -140,6 +140,7 @@
 @media screen and (min-width: 768px) {
   .section-title {
     width: 645px;
+    letter-spacing: 0.02em;
     font-size: 48px;
     margin: 0 auto 75px;
   }
